source/style.css
/* General */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --sansSerif: Futura, "Segoe UI", Verdana, sans-serif;
  --serif: Georgia, serif;
  --monospace: "Monaco", Consolas, monospace;

  --black: #000;
  --white: #fbfbff;
  --orangeOverBlack: #ffae00;
  --redOverWhite: #aa0000;
  --violetOverWhite: #7023b7;

  --margin: 11.089vw;
  --step6: calc(1.602rem + 5.063vw);
  --step5: calc(1.424rem + 3.375vw);
  --step4: calc(1.266rem + 2.25vw);
  --step3: calc(1.125rem + 1.5vw);
  --step2: calc(1rem + 1vw);
  --step1: calc(0.889rem + 0.667vw);
  --step0: calc(0.79rem + 0.444vw);
}

html,
body {
  height: 100%;
}

body {
  font: 100%/1.45 var(--sansSerif);
}

.hero {
  display: flex;
  height: 100%;
  flex-direction: column;
  background: var(--black) url("/imgs/svg.svg") center / cover no-repeat;
}

.hero header {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

a {
  text-decoration: none;
  color: var(--redOverWhite);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.2;
  text-align: center;
}

h2,
h3,
h4,
h5,
h6 {
  margin: var(--step2) 0 var(--step0);
}

.uppercase {
  text-transform: uppercase;
}

figure {
  max-width: 100%;
  margin: var(--step2) 0 0 0;
  display: block;
  text-align: center;
}

/* Navigation */
nav {
  height: calc(var(--step0) * 5);
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: var(--step0);
  background-color: rgba(0, 0, 0, 0.2);
}

nav a {
  text-decoration: none;
  color: var(--orangeOverBlack);
}

nav a:not(:first-child) {
  margin-left: calc(var(--margin) * 0.3);
}

.active {
  color: var(--white);
}

/* Main content */
main {
  background: var(--white);
  flex: 1;
  padding: calc(var(--margin) * 0.5);
}

main * {
  margin-left: auto;
  margin-right: auto;
}

main h2 {
  color: var(--black);
  margin-top: var(--step6);
  margin-bottom: var(--step0);
  max-width: calc(var(--step2) * 24);
}

main h2,
main h3,
main h4,
main h5,
main h6 {
  font-family: var(--sansSerif);
  font-weight: bold;
  text-align: left;
}

main p:last-child {
  margin-bottom: 0;
}

header {
  padding: 0 calc(var(--margin) * 0.5);
}

h1 {
  font-size: var(--step6);
  color: var(--orangeOverBlack);
}

h2 {
  font: normal var(--step5) / 1.1 var(--serif);
  color: var(--white);
  margin-bottom: 0;
}

h2 a {
  color: var(--orangeOverBlack);
}

main p,
ul,
ol {
  margin-bottom: var(--step0);
  font: var(--step1) / 1.4 var(--serif);
  max-width: calc(var(--step2) * 24);
  text-align: left;
}

ul,
ol {
  padding: 0 0 0 var(--step4);
}

ul + *,
ol + *,
figure + * {
  margin-top: var(--step1);
}

.metadata {
  font: var(--step0) var(--sansSerif);
  text-overflow: ellipsis;
  overflow: hidden;
  font-weight: bold;
  white-space: nowrap;
  margin-bottom: 0;
}

.metadata span {
  width: calc(var(--step0) * 7);
  font-family: var(--sansSerif);
}

.underMetadata {
  margin-top: var(--step5);
}

.metadataInArticleOrPost {
  max-width: calc(var(--step2) * 24);
}

.link {
  margin: calc(var(--step0) * 0.2) auto var(--step5);
  font-size: var(--step3);
}

main div *:last-child {
  margin-bottom: 0;
}

.contact {
  margin-top: var(--step5);
  margin-top: var(--step6);
  color: var(--violetOverWhite);
  font-size: var(--step1);
  border-top: calc(var(--step0) * 0.3) dotted var(--black);
  padding-top: var(--step0);
}

code {
  font: 80%/1 var(--monospace);
}

/* Footer */
footer,
#pInsideHero {
  height: calc(var(--step0) * 5);
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--white);
  font-size: var(--step0);
  background-color: rgba(0, 0, 0, 0.2);
  text-align: center;
}

#pInsideHero {
  color: var(--white);
  font-size: var(--step2);
}

#blackFooter {
  background-color: rgba(0, 0, 0, 0.8);
}

footer a {
  text-decoration: none;
  color: var(--orangeOverBlack);
}

